# word-bv

./: word-bv.cabal
src/Data/BitVector/: Word.hs
