name:                word-bv
version:             0.1.0.0
synopsis:            Word-backed bitvectors
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.BitVector.Word
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
